Fix spacing between contnet elements

--- a/content/themes/elements/sass/layout/_main.scss
+++ b/content/themes/elements/sass/layout/_main.scss
@@ -3,15 +3,13 @@ main{
   height: 100%;
   min-height: 100%;
   overflow: hidden;
-  padding-top: 40px;
+  padding-top: 80px;
   padding-bottom: 80px;
 
   background: $grey-light;
   z-index: $zIndex-main;
 }
 
-body.archive,
-body.search,
 body.home{
   main{
     padding-top: 0;
