--- a/content/themes/elements/sass/shop/_product.scss
+++ b/content/themes/elements/sass/shop/_product.scss
@@ -1,7 +1,3 @@
-body.single-product main{
-  padding-top: 0;
-}
-
 .product{
   .product-back{
     width: 100%;
