--- a/content/themes/elements/sass/shop/_thumb.scss
+++ b/content/themes/elements/sass/shop/_thumb.scss
@@ -1,3 +1,7 @@
+.brands{
+  padding-top: 80px;
+}
+
 .products .product,
 .brands .brand{
   padding: 0 40px;
